--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,25 @@
 
 - Font weight : 
 Default : 400
+Half-bold : 600
+Primary heading : 700
 
-- Lineheights : 
+- Line heights : 
 Default : 1
-
-
+Primary heading : 1.05
+text : 1.6
 
 -- 02/Colors
 
+- White : #fff
 - Primary : #e67e22
 
-- Tints : 
-- Shades : 
+- Tints : #fdf2e9
+- Shades : #cf711f
 - Accents :
 - Greys :
 #555
+#333
 
 -- 03/Images
 
@@ -35,6 +39,7 @@ Default : 1
 - SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
  */
+
 html {
   /* 1rem = 10px */
   font-size: 62.5%;
@@ -45,13 +50,99 @@ html {
   box-sizing: border-box;
 }
 body {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
 }
-.test {
-  width: 1000px;
-  background-color: red;
-  padding: 100px;
+
+/* Helper Classes */
+.margin-right-sm {
+  margin-right: 1.6rem !important;
+}
+
+/* Hero Section  */
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 9.6rem 0;
+}
+.hero {
+  max-width: 130rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 9.6rem;
+  align-items: center;
+}
+.heading-primary {
+  font-size: 5.2rem;
+  letter-spacing: -0.5px;
+  line-height: 1.05;
+  font-weight: 700;
+  color: #333;
+  margin-bottom: 3.2rem;
+}
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 4.8rem;
+}
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 2rem;
+  padding: 1.6rem 3.2rem;
+  border-radius: 0.9rem;
+  transition: all 0.3s;
+  font-weight: 600;
+}
+.btn--full:link,
+.btn--full:visited {
+  background-color: #e67e22;
+  color: #fff;
+}
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+}
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: #555;
+}
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: #fdf2e9;
+  box-shadow: inset 0 0 0 3px #fff;
+}
+.hero-img {
+  width: 100%;
+}
+.delivered-meals {
+  display: flex;
+  margin-top: 8rem;
+  gap: 1.6rem;
+  align-items: center;
+}
+.delivered-imgs {
+  display: flex;
+}
+.delivered-imgs img {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
+}
+.delivered-imgs img:last-child {
+  margin: 0;
+}
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
 }
