--- a/css/general.css
+++ b/css/general.css
@@ -29,10 +29,11 @@ Paragraph : 1.6
 #fdf2e9
 #fae5d3
 - Shades : #cf711f
-- Accents :
+- Accents : 
 - Greys :
 #555
 #333
+- Tags : #51cf66 #94d82d #ffd43b
 
 -- 03/Images
 
@@ -43,6 +44,7 @@ Paragraph : 1.6
 -- 06/Border-Radius
 
 - Default: 9px
+- Medium: 11px
 
 -- 07/Whitespace
 
@@ -130,8 +132,8 @@ body {
   font-size: 2rem;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
-  transition: all 0.3s;
   font-weight: 600;
+  transition: all 0.3s;
 }
 .btn--full:link,
 .btn--full:visited {
@@ -152,7 +154,27 @@ body {
   background-color: #fdf2e9;
   box-shadow: inset 0 0 0 3px #fff;
 }
+.link:link,
+.link:visited {
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  transition: all 0.3s;
+}
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+strong {
+  font-weight: 500;
 }
