--- a/css/general.css
+++ b/css/general.css
@@ -82,6 +82,9 @@ body {
   row-gap: 9.6rem;
   column-gap: 6.4rem;
 }
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
+}
 .grid--center-v {
   align-items: center;
 }
@@ -164,6 +167,24 @@ body {
   display: inline-block;
   transition: all 0.3s;
 }
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
+
 .link:hover,
 .link:active {
   color: #cf711f;
