--- a/css/general.css
+++ b/css/general.css
@@ -28,7 +28,10 @@ Paragraph : 1.6
 - Tints : 
 #fdf2e9
 #fae5d3
-- Shades : #cf711f
+#eb984e
+- Shades : 
+#cf711f
+#45260a
 - Accents : 
 - Greys :
 #6f6f6f
@@ -41,6 +44,8 @@ Paragraph : 1.6
 -- 04/Icons
 
 -- 05/Shadows 
+
+- 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075)
 
 -- 06/Border-Radius
 
@@ -129,6 +134,7 @@ body {
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
 }
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -138,6 +144,9 @@ body {
   border-radius: 9px;
   font-weight: 600;
   transition: all 0.3s;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 }
 .btn--full:link,
 .btn--full:visited {
@@ -158,6 +167,16 @@ body {
   background-color: #fdf2e9;
   box-shadow: inset 0 0 0 3px #fff;
 }
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
+}
 .link:link,
 .link:visited {
   color: #e67e22;
@@ -166,6 +185,11 @@ body {
   padding-bottom: 2px;
   display: inline-block;
   transition: all 0.3s;
+}
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
 }
 .list {
   list-style: none;
@@ -184,11 +208,9 @@ body {
   height: 3rem;
   color: #e67e22;
 }
-
-.link:hover,
-.link:active {
-  color: #cf711f;
-  border-bottom: 1px solid transparent;
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 .margin-right-sm {
