--- a/css/general.css
+++ b/css/general.css
@@ -34,6 +34,8 @@ Paragraph : 1.6
 #45260a
 - Accents : 
 - Greys :
+#888
+#767676
 #6f6f6f
 #555
 #333
@@ -101,6 +103,9 @@ body {
 }
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
+}
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .heading-primary,
