--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   align-items: center;
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 .logo {
   height: 2.2rem;
@@ -20,7 +21,7 @@
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 .main-nav-link:link,
 .main-nav-link:visited {
@@ -45,6 +46,22 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
+}
+/* Mobile Nav */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 /* ******************** */
 /* HERO SECTION */
@@ -263,9 +280,7 @@
   row-gap: 4.8rem;
   column-gap: 8rem;
 }
-.gallery {
-  padding: 1.6rem;
-}
+
 .testimonials-container {
   padding: 9.6rem;
 }
@@ -288,6 +303,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1.6rem;
+  padding: 1.6rem;
 }
 .gallery-item {
   overflow: hidden;
