--- a/css/queries.css
+++ b/css/queries.css
@@ -95,9 +95,11 @@
   /* MOBILE NAVIGATION */
   .btn-mobile-nav {
     display: block;
+    z-index: 9999;
   }
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.97);
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.6);
     position: absolute;
     top: 0;
     left: 0;
